<resources>
    <string name="app_name">Taller3</string>
    <string name="page_title">Taller 3</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="salir">Salir</string>
    <string name="perfil">Perfil</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="registro">REGISTRARME</string>
    <string name="inicio">INICIAR SESION</string>
    <string name="olvido">Olvido su contraseña</string>
    <string name="titulo_resgistro">Registrarme</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="id">Numero de Identificacion</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="descriptive_text_for_scroll_view">Descripción detallada del contenido desplazable en esta pantalla</string>
    <string name="localizar">Localizar</string>
    <string name="nombre_disponible">Nombre</string>
    <string name="correo_disponible">Correo@correo.com</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="este_es_tu_correo">Este es tu correo</string>
    <string name="tus_coordenadas">Tus coordenadas</string>
    <string name="lista_usuarios_disponibles">Lista usuarios disponibles</string>
    <string name="tu_estado">Tu estado</string>
</resources>